# jet

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  custompt.py  doctor.py  gumtest.sh  hex_ansi.py  jet_selection.py  main.py  new_progress_bar.py  prototype.py  pyproject.toml  requirements.txt  result.json  results_cache.csv  richtest.py  runner.py  setup.cfg  setup.py  test  textest.sh  tracer.py
.github/workflows/: release.yaml
jet/: checks.py  classes.py  doctor.py  jet.py  jet_selection.py  main.py  mod_selection.py  new_doctor_seer.py  new_runner.py  report.py  runner.py  seer.py  selection.py  test_selection.py  ui.py
jet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
jet_test/: __init__.py  checks.py  classes.py  main.py  report.py  runner.py  seer.py  ui.py
tests/: jet.results.json  main.py  test_array_operations.py  test_capture_options.py  test_custom_failing_conditions.py  test_example.py  test_verbose_levels.py
